--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.2",
     "pg": "^7.18.1",
     "puppeteer": "^2.1.1",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "twilio": "^3.39.5"
   }
 }
